# computer-vision-112-NTU

./: README.md
Final_project/GMC_for_segmentation/: README.md  activate.sh  main.py  note.txt  pyproject.toml  requirements.txt  verifying_12.py  verifying_24.py
Final_project/GMC_for_segmentation/Common_code/: Detectron2_panoptic.ipynb  GMC.py  SAM.ipynb  YOLO_Instance.ipynb  YOLO_tracking.ipynb
Final_project/GMC_for_segmentation/cvfgmc/models/: affline.py  base.py  lucas_kanade.py  match.py  naive.py  optical_flow.py  orb.py  perspective.py
Final_project/GMC_for_segmentation/cvfgmc/motion_search/: __init__.py  akaze.py  base.py  brisk.py  kanade.py  kaze.py  orb.py  sift.py
Final_project/GMC_for_segmentation/cvfgmc/utils/: __init__.py  frames.py  hierarchical_B.py  homography.py  psnr.py
Final_project/GMC_for_segmentation/materials/MediaTek_Materials/: eval.py
Final_project/GMC_for_segmentation/output/1/: Hs.npy  Hs_optimized.npy  psnr_12_model.csv  result.txt
Final_project/GMC_for_segmentation/output/2/: Hs.npy  psnr_12_model.csv  psnr_24_model.csv  result.txt
Final_project/GMC_for_segmentation/output/3/: Hs.npy  psnr_12_model.csv  result.txt
Final_project/GMC_for_segmentation/playground/: H_optimizing.py  PSNR_problem.py  best_N_array.py  block_mse.py  find_best_block_both.py  find_best_block_cuda.py  find_best_block_parallel.py  h5_read.py  motion_search_grid_orb.py  motion_search_orb.py  motion_search_show_grid_features.py  same_block.py  same_pixels.py
hw1_material/: report_hw1_temp.docx
hw4_material/: computeDisp.py  main.py  (+1 more)
(+32 files in other folders)
